--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">@color/dark_grey</color>
+    <color name="colorPrimaryDark">@color/black</color>
+    <color name="colorAccent">@color/material_red_900</color>
+
+    <color name="white">#FFFFFF</color>
+    <color name="white_50">#80d8d8d8</color>
+    <color name="black">#000000</color>
+    <color name="dark_grey">#212121</color>
+    <color name="material_red_900">#B71C1C</color>
 </resources>
