--- a/note/src/main/res/values/dimens.xml
+++ b/note/src/main/res/values/dimens.xml
@@ -11,4 +11,6 @@
 
     <dimen name="rounded_text_radius">15dp</dimen>
     <dimen name="rounded_text_stroke">1dp</dimen>
+    <dimen name="rounded_text_horizontal_padding">8dp</dimen>
+    <dimen name="rounded_text_vertical_padding">5dp</dimen>
 </resources>
