--- a/note/src/main/res/values/styles.xml
+++ b/note/src/main/res/values/styles.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="RoundedText" parent="Widget.AppCompat.TextView">
-        <item name="android:padding">5dp</item>
+        <item name="android:paddingTop">@dimen/rounded_text_vertical_padding</item>
+        <item name="android:paddingBottom">@dimen/rounded_text_vertical_padding</item>
+        <item name="android:paddingStart">@dimen/rounded_text_horizontal_padding</item>
+        <item name="android:paddingEnd">@dimen/rounded_text_horizontal_padding</item>
         <item name="android:background">@drawable/round_text_shape</item>
     </style>
 </resources>
