--- a/note/src/main/res/layout/dashboard_fragment.xml
+++ b/note/src/main/res/layout/dashboard_fragment.xml
@@ -7,6 +7,29 @@
     android:layout_height="match_parent"
     tools:context=".dashboard.DashboardFragment">
 
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmerLayout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:visibility="gone"
+        app:shimmer_duration="@integer/shimmer_duration"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/createNote">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <include layout="@layout/dashboard_item_placeholder"/>
+            <include layout="@layout/dashboard_item_placeholder"/>
+            <include layout="@layout/dashboard_item_placeholder"/>
+            <include layout="@layout/dashboard_item_placeholder"/>
+        </LinearLayout>
+    </com.facebook.shimmer.ShimmerFrameLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/tasksRecyclerView"
         android:layout_width="match_parent"
