--- a/note/src/main/res/values/integer.xml
+++ b/note/src/main/res/values/integer.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <integer name="dashboard_item_description_max_lines">5</integer>
+    <integer name="shimmer_duration">1000</integer>
 </resources>
