--- a/note/src/main/res/values/dimens.xml
+++ b/note/src/main/res/values/dimens.xml
@@ -13,4 +13,15 @@
     <dimen name="rounded_text_stroke">1dp</dimen>
     <dimen name="rounded_text_horizontal_padding">8dp</dimen>
     <dimen name="rounded_text_vertical_padding">5dp</dimen>
+
+    <dimen name="detail_margin">16dp</dimen>
+    <dimen name="detail_item_margin">15dp</dimen>
+    <dimen name="detail_item_margin_small">10dp</dimen>
+    <dimen name="detail_title_text_size">20sp</dimen>
+    <dimen name="detail_description_text_size">16sp</dimen>
+    <dimen name="detail_due_date_text_size">14sp</dimen>
+
+    <dimen name="tag_input_padding">16dp</dimen>
+    <dimen name="tag_padding">5dp</dimen>
+    <dimen name="tag_padding_bottom">3dp</dimen>
 </resources>
