--- a/note/src/main/res/values/styles.xml
+++ b/note/src/main/res/values/styles.xml
@@ -7,4 +7,20 @@
         <item name="android:paddingEnd">@dimen/rounded_text_horizontal_padding</item>
         <item name="android:background">@drawable/round_text_shape</item>
     </style>
+
+    <style name="DetailTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimary</item>
+        <item name="colorAccent">@color/colorPrimary</item>
+    </style>
+
+    <style name="MultilineEditText" parent="Widget.AppCompat.EditText">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorHint">@color/white_50</item>
+        <item name="android:background">@null</item>
+        <item name="android:textCursorDrawable">@null</item>
+        <item name="android:ems">10</item>
+        <item name="android:gravity">start|top</item>
+        <item name="android:inputType">textMultiLine</item>
+    </style>
 </resources>
