--- a/note/src/main/res/values/dimens.xml
+++ b/note/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
 
     <dimen name="dashboard_item_padding">10dp</dimen>
     <dimen name="dashboard_item_primary_text_size">14sp</dimen>
+    <dimen name="dashboard_item_secondary_text_size">8sp</dimen>
     <dimen name="dashboard_item_margin">10dp</dimen>
     <dimen name="dashboard_item_radius">10dp</dimen>
     <dimen name="dashboard_item_stroke">2dp</dimen>
