--- a/note/src/main/res/layout/dashboard_fragment.xml
+++ b/note/src/main/res/layout/dashboard_fragment.xml
@@ -43,7 +43,7 @@
 
     <TextView
         android:id="@+id/createNote"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/create_task"
         android:padding="@dimen/create_task_padding"
@@ -54,6 +54,21 @@
         android:drawablePadding="@dimen/drawable_padding"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/createNotes"/>
+
+    <TextView
+        android:id="@+id/createNotes"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/create_tasks"
+        android:padding="@dimen/create_task_padding"
+        android:textColor="@color/white_50"
+        android:textSize="@dimen/create_task_text_size"
+        android:background="@drawable/create_button_background"
+        android:drawableStart="@drawable/ic_add"
+        android:drawablePadding="@dimen/drawable_padding"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/createNote"
         app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
