--- a/note/src/main/res/values/styles.xml
+++ b/note/src/main/res/values/styles.xml
@@ -23,4 +23,11 @@
         <item name="android:gravity">start|top</item>
         <item name="android:inputType">textMultiLine</item>
     </style>
+
+    <style name="ClickableText" parent="Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/white_50</item>
+        <item name="android:background">@drawable/create_button_background</item>
+        <item name="android:textSize">@dimen/create_task_text_size</item>
+        <item name="android:padding">@dimen/create_task_padding</item>
+    </style>
 </resources>
